# kmer-generator

./: Cargo.toml  install.sh  test.py
src/: lib.rs
